changing things a bit

--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -135,8 +135,8 @@
     <string name="settings_category_suggestions">Предложения</string>
     <string name="settings_category_experimental">Експериментални</string>
     <string name="settings_category_miscellaneous">Разни</string>
-    <string name="spell_checker_service_name">Проверка на правописа HeliBoard</string>
-    <string name="ime_settings">Настройки HeliBoard</string>
+    <string name="spell_checker_service_name">Проверка на правописа Primeboard</string>
+    <string name="ime_settings">Настройки Primeboard</string>
     <string name="android_spell_checker_settings">Настройки за проверка на правописа</string>
     <string name="switch_language">Превключване на езика</string>
 </resources>
