--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -128,8 +128,8 @@
     <string name="enable_clipboard_history">Attiva la cronologia appunti</string>
     <string name="enable_clipboard_history_summary">Se disattivata, il tasto \'Appunti\' incolla direttamente l\'ultimo contenuto</string>
     <string name="clipboard_history_retention_time">Durata dei contenuti nella cronologia</string>
-    <string name="spell_checker_service_name">HeliBoard - Controllo ortografico</string>
-    <string name="android_spell_checker_settings">HeliBoard - Impostazioni controllo ortografico</string>
+    <string name="spell_checker_service_name">Primeboard - Controllo ortografico</string>
+    <string name="android_spell_checker_settings">Primeboard - Impostazioni controllo ortografico</string>
     <string name="number_row">Riga dei numeri</string>
     <string name="delete_swipe">Scorri per cancellare</string>
     <string name="delete_swipe_summary">Scorri indietro partendo da \'Backspace\' per selezionare e rimuovere porzioni di testo più ampie in una sola volta</string>
@@ -148,7 +148,7 @@
     <string name="settings_category_experimental">Opzioni sperimentali</string>
     <string name="settings_category_miscellaneous">Varie</string>
     <string name="settings_category_input">Immissione</string>
-    <string name="ime_settings">HeliBoard - Impostazioni</string>
+    <string name="ime_settings">Primeboard - Impostazioni</string>
     <string name="prefs_force_incognito_mode_summary">Disattiva l\'apprendimento di nuove parole</string>
     <string name="key_borders">Bordi dei tasti</string>
     <string name="day_night_mode">Tema chiaro/scuro automatico</string>
