--- a/app/src/main/res/values-fil/strings.xml
+++ b/app/src/main/res/values-fil/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="ime_settings">Mga Setting ng HeliBoard</string>
+    <string name="ime_settings">Mga Setting ng Primeboard</string>
     <string name="use_contacts_for_spellchecking_option_summary">Gagamitin ng spell checker ang mga entry mula sa iyong listahan ng contact</string>
     <string name="vibrate_on_keypress">Mag-vibrate sa keypress</string>
     <string name="sound_on_keypress">Tunog sa keypress</string>
@@ -49,8 +49,8 @@
     <string name="auto_correction_threshold_mode_off">Off</string>
     <string name="auto_correction_threshold_mode_modest">Mababang-loob</string>
     <string name="auto_correction_threshold_mode_aggressive">Agresibo</string>
-    <string name="spell_checker_service_name">Spell Checker ng HeliBoard</string>
-    <string name="android_spell_checker_settings">Mga Setting ng Spell Checker ng Heliboard</string>
+    <string name="spell_checker_service_name">Spell Checker ng Primeboard</string>
+    <string name="android_spell_checker_settings">Mga Setting ng Spell Checker ng Primeboard</string>
     <string name="use_contacts_for_spellchecking_option_title">Hanapin ang mga pangalan ng contact</string>
     <string name="settings_category_suggestions">Mga mungkahi</string>
     <string name="abbreviation_unit_milliseconds"><xliff:g id="MILLISECONDS">%s</xliff:g> ms</string>
