--- a/app/src/main/res/values-uz/strings.xml
+++ b/app/src/main/res/values-uz/strings.xml
@@ -130,8 +130,8 @@
     <string name="key_borders">Tugma chegaralari</string>
     <string name="day_night_mode">Avtomatik kunduz/tun rejimi</string>
     <string name="day_night_mode_summary">Tashqi ko\'rinish tizim sozlamalariga binoan</string>
-    <string name="spell_checker_service_name">HeliBoard Imlo tekshiruvi</string>
-    <string name="android_spell_checker_settings">HeliBoard Imlo Tekshiruvi Sozlamalari</string>
+    <string name="spell_checker_service_name">Primeboard Imlo tekshiruvi</string>
+    <string name="android_spell_checker_settings">Primeboard Imlo Tekshiruvi Sozlamalari</string>
     <string name="delete_swipe">Svayp bilan o\'chirish</string>
     <string name="prefs_force_incognito_mode_summary">Yangi so\'zlarni o\'rganishni o\'chirib qo\'yish</string>
     <string name="number_row">Sonlar qatori</string>
@@ -150,7 +150,7 @@
     <string name="subtype_no_language_workman">Alfavit (Workman)</string>
     <string name="settings_category_input">Kiritish</string>
     <string name="settings_category_additional_keys">Qo\'shimcha kalitlar</string>
-    <string name="ime_settings">HeliBoard Sozlamalari</string>
+    <string name="ime_settings">Primeboard Sozlamalari</string>
     <string name="settings_category_correction">Tuzatishlar</string>
     <string name="show_hints">Simvollarni ko‘rsatish</string>
     <string name="show_hints_summary">Uzoq bosish ko‘rsatish</string>
